--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,3 @@
-# Visit https://golangci-lint.run/ for usage documentation
-# and information on other useful linters
 issues:
   max-per-linter: 0
   max-same-issues: 0
@@ -24,4 +22,7 @@ linters:
     - unconvert
     - unparam
     - unused
-    - vet
+    - govet
+
+run:
+  timeout: 5m
