--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
           cache: true
 
       - name: Run linters
-        uses: golangci/golangci-lint-action@a4f60bb28d35aeee14e6880718e0c85ff1882e64 # v6.0.1
+        uses: golangci/golangci-lint-action@aaa42aa0628b4ae2578232a66b541047968fac86 # v6.1.0
         with:
           version: latest
 
@@ -41,6 +41,7 @@ jobs:
           make build
 
   generate:
+    name: Check docs
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -70,7 +71,7 @@ jobs:
             (echo "*** Unexpected diff after code generation. Run 'make generate' and commit."; exit 1)
 
   test:
-    name: 'Terraform Provider Acceptance Tests (OS: ${{ matrix.os }} / TF: ${{ matrix.terraform }})'
+    name: 'AccTest [OS: ${{ matrix.os }} | TF: ${{ matrix.terraform }}]'
     needs:
       - build
       - generate
